THE BIG RETHEME:svg fixes, colors, theme removals

--- a/web/index.html
+++ b/web/index.html
@@ -41,12 +41,13 @@
         font-style: italic;
         font-display: swap;
       }
-      html {
-        background-color: white;
-      }
+    html {
+  background-color: #1F0B35;
+  background-attachment: fixed;
+    }
       @media (prefers-color-scheme: dark) {
         html {
-          background-color: black;
+          background-color: #1F0B35;
         }
       }
       html,
@@ -68,8 +69,15 @@
       #root {
         display: flex;
         flex: 1 0 auto;
-        min-height: 100%;
+        min-height: 100vh;
+        height: 100%;
         width: 100%;
+      }
+
+      /* Ensure body also has the same background so scrolling content doesn't reveal a different color */
+      body {
+        background-color: #1F0B35;
+        background-attachment: fixed;
       }
       #splash {
         position: fixed;
@@ -93,7 +101,7 @@
 
   <body>
   <noscript style="
-     background-color: #fff;
+  background-color: #1F0B35;
      position: fixed;
      top: 0;
      left: 0;
@@ -110,17 +118,8 @@
     <!-- The root element for your Expo app. -->
     <div id="root">
       <div id="splash">
-        <!-- deer SVG -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-
-          <defs>
-            <linearGradient x1="0" y1="0" x2="0" y2="1" id="index_sky"><stop offset="0" stop-color="#a3b18a" stop-opacity="1"></stop><stop offset="1" stop-color="#344e41" stop-opacity="1"></stop></linearGradient>
-          </defs>
-          <path fill="url(#index_sky)"
-            d="m 149.96484,186.56641 46.09766,152.95898 c 0,0 -6.30222,-9.61174 -15.60547,-17.47656 -8.87322,-7.50128 -28.4082,-4.04492 -28.4082,-4.04492 0,0 6.14721,39.88867 15.53125,44.39843 10.71251,5.1482 22.19726,0.16993 22.19726,0.16993 0,0 11.7613,-4.87282 22.82032,31.82421 5.26534,17.47196 15.33258,50.877 20.9707,69.58594 2.16717,7.1913 8.83789,7.25781 8.83789,7.25781 0,0 6.67072,-0.0665 8.83789,-7.25781 5.63812,-18.70894 15.70536,-52.11398 20.9707,-69.58594 11.05902,-36.69703 22.82032,-31.82421 22.82032,-31.82421 0,0 11.48475,4.97827 22.19726,-0.16993 9.38404,-4.50976 15.5332,-44.39843 15.5332,-44.39843 0,0 -19.53693,-3.45636 -28.41015,4.04492 -9.30325,7.86482 -15.60547,17.47656 -15.60547,17.47656 l 46.09766,-152.95898 -49.32618,83.84179 -20.34375,-31.1914 6.35547,54.96875 -23.1582,39.36132 c 0,0 -2.97595,5.06226 -5.94336,4.68946 -0.009,-0.001 -0.0169,0.003 -0.0254,0.01 -0.008,-0.007 -0.0167,-0.0109 -0.0254,-0.01 -2.96741,0.3728 -5.94336,-4.68946 -5.94336,-4.68946 l -23.1582,-39.36132 6.35547,-54.96875 -20.34375,31.1914 z"
-            transform="matrix(2.6921023,0,0,1.7145911,-396.58283,-308.01527)"
-          />
-        </svg>
+        <!-- nsky SVG -->
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1024 1024"><defs><linearGradient id="a" x1="564.17" y1="22.4" x2="374.54" y2="1187.29" gradientTransform="matrix(1 0 0 1.03 31.9 91.01)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#2affba"/><stop offset=".02" stop-color="#31f4bd"/><stop offset=".14" stop-color="#53bccc"/><stop offset=".25" stop-color="#718ada"/><stop offset=".37" stop-color="#8a5fe5"/><stop offset=".49" stop-color="#9f3def"/><stop offset=".61" stop-color="#af22f6"/><stop offset=".74" stop-color="#bb0ffb"/><stop offset=".87" stop-color="#c204fe"/><stop offset="1" stop-color="#c400ff"/></linearGradient><linearGradient id="b" x1="554.29" y1="20.79" x2="364.65" y2="1185.68" xlink:href="#a"/><linearGradient id="c" x1="561.1" y1="21.9" x2="371.47" y2="1186.79" xlink:href="#a"/><linearGradient id="d" x1="530.57" y1="16.93" x2="340.93" y2="1181.82" xlink:href="#a"/></defs><path d="m275.87 880.64 272-184.16 120.79 114 78.55-56.88 184.6 125.1a485.5 485.5 0 0 0 55.81-138.27c-64.41-21.42-127-48.15-185.92-73.32-97-41.44-188.51-80.52-253.69-80.52-59.57 0-71.53 18.85-89.12 55-16.89 34.55-37.84 77.6-139.69 77.6-81.26 0-159.95-29.93-243.27-61.61-17.07-6.5-34.57-13.14-52.49-19.69A486.06 486.06 0 0 0 95.19 884l91.29-62.16Z" style="fill:url(#a)"/><path d="M295.26 506.52c53.69 0 64.49-17.36 80.41-50.63 15.46-32.33 34.7-72.56 128.36-72.56 75 0 154.6 33.2 246.78 71.64 74.85 31.21 156.89 65.34 241 81.63a485.6 485.6 0 0 0-64.23-164.85c-108.88-6-201.82-43.35-284.6-76.69-66.77-26.89-129.69-52.22-182.84-52.22-46.88 0-56.43 15.74-70.55 45.89-13.41 28.65-31.79 67.87-118.24 67.87-44.25 0-90.68-13.48-141-33.11A488.3 488.3 0 0 0 62.86 435.7c8.3 3.38 16.55 6.74 24.68 10.08 76.34 31.22 148.3 60.74 207.72 60.74" style="fill:url(#b)"/><path d="M319.2 687.81c61.24 0 73.38-19.09 91.18-55.66 16.7-34.28 37.48-76.95 137.58-76.95 81.4 0 174.78 39.89 282.9 86.09 52.19 22.29 107.38 45.84 163.42 65.43a483 483 0 0 0 2.72-136.5C898.41 554.4 806 516 722.27 481.05c-81.88-34.14-159.08-66.33-218.27-66.33-53.25 0-64 17.29-79.84 50.42-15.51 32.42-34.8 72.77-128.93 72.77-75.08 0-153.29-32-236.08-66l-8.91-3.64A487 487 0 0 0 24 601.68c27.31 9.55 53.55 19.52 79 29.19 80.24 30.55 149.61 56.94 216.2 56.94" style="fill:url(#c)"/><path d="M341 279.65c13.49-28.78 31.95-68.19 119.16-68.19 68.59 0 137.73 27.84 210.92 57.32 70.14 28.22 148.13 59.58 233.72 69.37C815.77 218 673 140 511.88 140c-141.15 0-268.24 59.92-357.45 155.62 44 17.32 84.15 29.6 116.89 29.6 46.24 0 55.22-14.79 69.68-45.57" style="fill:url(#d)"/></svg>
       </div>
     </div>
   </body>
