--- a/web/index.html
+++ b/web/index.html
@@ -112,7 +112,7 @@
    ">
     <h1 lang="en">JavaScript Required</h1>
     <p lang="en">This is a heavily interactive web application, and JavaScript is required. Simple HTML interfaces are possible, but that is not what this is.
-    <p lang="en">Learn more about Bluesky at <a href="https://bsky.social">bsky.social</a> and <a href="https://atproto.com">atproto.com</a>, or this fork at <a href="https://github.com/a-viv-a/deer-social">github.com/a-viv-a/deer.social</a>.
+    <p lang="en">Learn more about Northsky at <a href="https://northskysocial.com">northskysocial.com</a> and <a href="https://atproto.com">atproto.com</a>, or this fork at <a href="https://github.com/NorthskySocial/social-app">github.com/NorthskySocial/social-app</a>.
   </noscript>
 
     <!-- The root element for your Expo app. -->
